# path-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  asan-suppressions.txt  build-debug.sh  build-release.sh  refactor-progress.md  run-debug.sh  run-release.sh  run.sh  shell.nix  todo.md
include/: camera.h  image.h  random.h  rayhit.h  tonemapping.h  viewport.h  world.h
include/gui/: gui.h  quad.h  shader.h  sprite.h  texture.h  window.h
include/gui/utils/: file.h
include/hittables/: hittable.h  plane.h  sphere.h
include/materials/: diffuse.h  emission.h  emissive.h  glass.h  material.h  metal.h
include/math/: ray.h  sphere.h  vector2.h  vector3.h
include/textures/: image.h  solid_color.h  texture.h
include/types/: base_types.h  color.h  material.h  rayhit.h
include/utils/: file.h
scenes/: brick-earth.scene  example.scene  spheres.scene  test.scene
shaders/: shader.frag  shader.vert
src/: camera.c  image.c  main.c  random.c  tonemapping.c  viewport.c  world.c
src/gui/: gui.c  quad.c  shader.c  sprite.c  texture.c  window.c
src/gui/utils/: file.c
src/hittables/: plane.c  sphere.c
src/materials/: diffuse.c  emission.c  emissive.c  glass.c  metal.c
src/math/: ray.c  sphere.c  vector3.c
src/textures/: image.c  solid_color.c  texture.c
src/types/: base_types.c  color.c
src/utils/: file.c
